Fix the problem partially hiding the post button when typing chat on iphone

--- a/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
@@ -62,6 +62,10 @@
   border: 1px solid $color-gray-lighter;
   box-shadow: 0 0 0 2px $color-gray-lighter;
 
+  @include mq($small-only) {
+    font-size: 16px;
+  }
+
   &:disabled,
   &[disabled] {
     cursor: not-allowed;
